objects/Participants__c.object
<CustomObject>
    <fields>
        <fullName>Accountant_Products_your_clients_use__c</fullName>
        <label>Products do your clients currently use</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quicken</fullName>
                </value>
                <value>
                    <fullName>Xero</fullName>
                </value>
                <value>
                    <fullName>Wave</fullName>
                </value>
                <value>
                    <fullName>FreshBooks</fullName>
                </value>
                <value>
                    <fullName>Custom/Manual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mac</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Pro</fullName>
                </value>
                <value>
                    <fullName>QBO</fullName>
                </value>
                <value>
                    <fullName>QBSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Status__c</fullName>
        <label>Activity Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Responded - Interested and available</fullName>
                </value>
                <value>
                    <fullName>Screened and available but not scheduled</fullName>
                </value>
                <value>
                    <fullName>Interested in participating in additional studies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_participant_feedback__c</fullName>
        <label>Additional participant feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Email_Address__c</fullName>
        <label>Alternate Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Amount_of_bills_expenses__c</fullName>
        <label>Amount of bills/expenses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-2</fullName>
                </value>
                <value>
                    <fullName>3-4</fullName>
                </value>
                <value>
                    <fullName>5-6</fullName>
                </value>
                <value>
                    <fullName>7-8</fullName>
                </value>
                <value>
                    <fullName>9+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_category__c</fullName>
        <label>App category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Payable Management</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable Management</fullName>
                </value>
                <value>
                    <fullName>Billing &amp; Invoicing</fullName>
                </value>
                <value>
                    <fullName>Commission Management</fullName>
                </value>
                <value>
                    <fullName>Contact Management</fullName>
                </value>
                <value>
                    <fullName>Customer Relationship Management (CRM)</fullName>
                </value>
                <value>
                    <fullName>Data Import/Export/Sync</fullName>
                </value>
                <value>
                    <fullName>Data Security/Backup</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>Estimating and Bidding</fullName>
                </value>
                <value>
                    <fullName>Expense Management</fullName>
                </value>
                <value>
                    <fullName>Field Service Management</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Inventiory Management</fullName>
                </value>
                <value>
                    <fullName>Manufacturing/Factory Management</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Payment Processing</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Point of Sales Solution</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Tax Tool</fullName>
                </value>
                <value>
                    <fullName>Time Tracking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_published_on_Intuit_Marketplace__c</fullName>
        <label>App published on Intuit Marketplace</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_published_on_apps_com__c</fullName>
        <label>App published on apps.com</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_a_Quickbooks_ProAdvisor__c</fullName>
        <label>Are you a Quickbooks ProAdvisor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_a_people_manager__c</fullName>
        <label>People manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_an_Innovation_Catalyst__c</fullName>
        <label>Innovation Catalyst</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_the_person_processes_payroll__c</fullName>
        <label>Are you the person processes payroll</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>As_Self_Employed__c</fullName>
        <label>Filing method last year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Karma</fullName>
                </value>
                <value>
                    <fullName>Family or friend</fullName>
                </value>
                <value>
                    <fullName>H&amp;R Block</fullName>
                </value>
                <value>
                    <fullName>Manual/Pen and Paper</fullName>
                </value>
                <value>
                    <fullName>Tax Professional/Accountant/CPA</fullName>
                </value>
                <value>
                    <fullName>Tax Store</fullName>
                </value>
                <value>
                    <fullName>TaxAct</fullName>
                </value>
                <value>
                    <fullName>TaxSlayer</fullName>
                </value>
                <value>
                    <fullName>TurboTax Desktop</fullName>
                </value>
                <value>
                    <fullName>TurboTax Mobile</fullName>
                </value>
                <value>
                    <fullName>TurboTax Online</fullName>
                </value>
                <value>
                    <fullName>Other Tax Software</fullName>
                </value>
                <value>
                    <fullName>I did not file/do not plan to file personal taxes</fullName>
                </value>
                <value>
                    <fullName>Accountant</fullName>
                    <isActive>false</isActive>
                    <label>Accountant</label>
                </value>
                <value>
                    <fullName>Family Friend</fullName>
                    <isActive>false</isActive>
                    <label>Family Friend</label>
                </value>
                <value>
                    <fullName>I did not file/do not plan to file taxes</fullName>
                    <isActive>false</isActive>
                    <label>I did not file/do not plan to file taxes</label>
                </value>
                <value>
                    <fullName>Manual / Pen and Paper</fullName>
                    <isActive>false</isActive>
                    <label>Manual / Pen and Paper</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Other Tax Software (online or desktop)</fullName>
                    <isActive>false</isActive>
                    <label>Other Tax Software (online or desktop)</label>
                </value>
                <value>
                    <fullName>Tax Professional / Accountant / CPA</fullName>
                    <isActive>false</isActive>
                    <label>Tax Professional / Accountant / CPA</label>
                </value>
                <value>
                    <fullName>Tax Store (H&amp;R Block, Liberty Tax, Check Cashing business etc.)</fullName>
                    <isActive>false</isActive>
                    <label>Tax Store (H&amp;R Block, Liberty Tax, Check Cashing business etc.)</label>
                </value>
                <value>
                    <fullName>TurboTax</fullName>
                    <isActive>false</isActive>
                    <label>TurboTax</label>
                </value>
                <value>
                    <fullName>TurboTax Desktop (used a CD or download)</fullName>
                    <isActive>false</isActive>
                    <label>TurboTax Desktop (used a CD or download)</label>
                </value>
                <value>
                    <fullName>TurboTax Mobile (used a mobile device - phone or tablet)</fullName>
                    <isActive>false</isActive>
                    <label>TurboTax Mobile (used a mobile device - phone or tablet)</label>
                </value>
                <value>
                    <fullName>TurboTax Online (used the website)</fullName>
                    <isActive>false</isActive>
                    <label>TurboTax Online (used the website)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attended_Study_Qualtrics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended Study Qualtrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_for_FMH__c</fullName>
        <label>Available for FMH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_for__c</fullName>
        <label>Available for:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Follow Me Home</fullName>
                </value>
                <value>
                    <fullName>Customers on Tap</fullName>
                </value>
                <value>
                    <fullName>Research studies</fullName>
                </value>
                <value>
                    <fullName>Connect Weekly</fullName>
                    <isActive>false</isActive>
                    <label>Connect Weekly</label>
                </value>
                <value>
                    <fullName>Office Hours</fullName>
                    <isActive>false</isActive>
                    <label>Office Hours</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_FG__c</fullName>
        <label>BU/FG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer Tax Group</fullName>
                </value>
                <value>
                    <fullName>Small Business Group</fullName>
                </value>
                <value>
                    <fullName>ProConnect Group</fullName>
                </value>
                <value>
                    <fullName>Consumer Ecosystem Group</fullName>
                </value>
                <value>
                    <fullName>Corporate Communications</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Legal, Data, Compliance, &amp; Policy</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Sales</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Technology Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Below_tasks_do_you_perform_for_clients__c</fullName>
        <label>What tasks do you perform for clients</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prepare and file taxes</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Consulting services</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping</fullName>
                </value>
                <value>
                    <fullName>General accounting – A/R, A/P, invoices, budgeting, etc.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_days_to_contact__c</fullName>
        <label>Best days to contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_fits_for_your_business_model__c</fullName>
        <label>Type of business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Project Based (i.e. consulting, contracting etc)</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Schedule-based</fullName>
                </value>
                <value>
                    <fullName>Membership-based</fullName>
                </value>
                <value>
                    <fullName>Wholesaling</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Other. Please specify:</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_time_to_contact__c</fullName>
        <label>Best time to contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mornings</fullName>
                </value>
                <value>
                    <fullName>Afternoons</fullName>
                </value>
                <value>
                    <fullName>Evenings</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                    <isActive>false</isActive>
                    <label>Friday</label>
                </value>
                <value>
                    <fullName>Monday</fullName>
                    <isActive>false</isActive>
                    <label>Monday</label>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                    <isActive>false</isActive>
                    <label>Saturday</label>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                    <isActive>false</isActive>
                    <label>Sunday</label>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                    <isActive>false</isActive>
                    <label>Thursday</label>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                    <isActive>false</isActive>
                    <label>Tuesday</label>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                    <isActive>false</isActive>
                    <label>Wednesday</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_pay_tools__c</fullName>
        <label>Bill pay tools</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tools offered through your bank</fullName>
                </value>
                <value>
                    <fullName>Tools offered through your credit card company</fullName>
                </value>
                <value>
                    <fullName>Bill pay directly via provider</fullName>
                </value>
                <value>
                    <fullName>Portfolio management tools</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
                <value>
                    <fullName>Other. Please specify:</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birth_year__c</fullName>
        <label>Birth year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1995</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1989</fullName>
                </value>
                <value>
                    <fullName>1988</fullName>
                </value>
                <value>
                    <fullName>1987</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Activities_SE__c</fullName>
        <label>Business Activities (SE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collect Payments</fullName>
                </value>
                <value>
                    <fullName>Collect Receipts</fullName>
                </value>
                <value>
                    <fullName>Create estimates</fullName>
                </value>
                <value>
                    <fullName>Create invoices</fullName>
                </value>
                <value>
                    <fullName>Create sales receipts</fullName>
                </value>
                <value>
                    <fullName>Get a Loan/Borrow Money</fullName>
                </value>
                <value>
                    <fullName>Grow customer base</fullName>
                </value>
                <value>
                    <fullName>Manage 1099 contractor/vendors/suppliers</fullName>
                </value>
                <value>
                    <fullName>Manage and collect membership dues</fullName>
                </value>
                <value>
                    <fullName>Manage budgets &amp; forecasting</fullName>
                </value>
                <value>
                    <fullName>Manage Employees</fullName>
                </value>
                <value>
                    <fullName>Manage Sales/VAT/GST Tax</fullName>
                </value>
                <value>
                    <fullName>Managing Inventory</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Order Supplies</fullName>
                </value>
                <value>
                    <fullName>Pay bills</fullName>
                </value>
                <value>
                    <fullName>Process Payments</fullName>
                </value>
                <value>
                    <fullName>Process payroll</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Recruit members</fullName>
                </value>
                <value>
                    <fullName>Run Reports</fullName>
                </value>
                <value>
                    <fullName>Schedule appointments</fullName>
                </value>
                <value>
                    <fullName>Sell Products</fullName>
                </value>
                <value>
                    <fullName>Ship &amp; Fulfill Orders</fullName>
                </value>
                <value>
                    <fullName>Time Tracking</fullName>
                </value>
                <value>
                    <fullName>Track customer information</fullName>
                </value>
                <value>
                    <fullName>Track expenses</fullName>
                </value>
                <value>
                    <fullName>Track income</fullName>
                </value>
                <value>
                    <fullName>Track mileage</fullName>
                </value>
                <value>
                    <fullName>Track sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Address__c</fullName>
        <label>Business Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_activities_SMB__c</fullName>
        <label>Business Activities (SMB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collect Payments</fullName>
                </value>
                <value>
                    <fullName>Collect Receipts</fullName>
                </value>
                <value>
                    <fullName>Create estimates</fullName>
                </value>
                <value>
                    <fullName>Create invoices</fullName>
                </value>
                <value>
                    <fullName>Create sales receipts</fullName>
                </value>
                <value>
                    <fullName>Get a Loan/Borrow Money</fullName>
                </value>
                <value>
                    <fullName>Grow customer base</fullName>
                </value>
                <value>
                    <fullName>Manage 1099 contractor/vendors/suppliers</fullName>
                </value>
                <value>
                    <fullName>Manage and collect membership dues</fullName>
                </value>
                <value>
                    <fullName>Manage budgets &amp; forecasting</fullName>
                </value>
                <value>
                    <fullName>Manage Employees</fullName>
                </value>
                <value>
                    <fullName>Manage Sales/VAT/GST Tax</fullName>
                </value>
                <value>
                    <fullName>Managing Inventory</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Order Supplies</fullName>
                </value>
                <value>
                    <fullName>Pay bills</fullName>
                </value>
                <value>
                    <fullName>Process Payments</fullName>
                </value>
                <value>
                    <fullName>Process payroll</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Recruit members</fullName>
                </value>
                <value>
                    <fullName>Run Reports</fullName>
                </value>
                <value>
                    <fullName>Schedule appointments</fullName>
                </value>
                <value>
                    <fullName>Sell Products</fullName>
                </value>
                <value>
                    <fullName>Ship &amp; Fulfill Orders</fullName>
                </value>
                <value>
                    <fullName>Time Tracking</fullName>
                </value>
                <value>
                    <fullName>Track customer information</fullName>
                </value>
                <value>
                    <fullName>Track expenses</fullName>
                </value>
                <value>
                    <fullName>Track income</fullName>
                </value>
                <value>
                    <fullName>Track mileage</fullName>
                </value>
                <value>
                    <fullName>Track sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>